--- a/gyakorlat01_feladatok (2).ipynb
+++ b/gyakorlat01_feladatok (2).ipynb
@@ -40,7 +40,8 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT *\r\n",
+                "FROM Kolcsonzes"
             ],
             "metadata": {
                 "azdata_cell_guid": "bd3cef1a-4e6e-4ece-9dc3-aaa9d2b5d66d"
