--- a/gyakorlat01_feladatok (2).ipynb
+++ b/gyakorlat01_feladatok (2).ipynb
@@ -87,7 +87,7 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT 1"
             ],
             "metadata": {
                 "azdata_cell_guid": "6405d3e8-a9b1-45d7-aa76-3b1e785ef6cc"
